Clase de window con un enum para elegir el tipo de ventana (solo usaremos render window para poder pintar en ella los shapes/sprites), solo se puede abrir una ventana por objeto window, tiene las siguientes funciones: initWindow() : es para iniciar una ventana, se le dan de parametros el alto, el ancho, el nombre y el tipo de ventana (por default crea una render window). getWindow() : retorna el puntero de la ventana. closeWindow() : se llama cuando se selecciona la opcion de cerrar la ventana, esta funcion libera todo lo usado en memoria que se uso para la ventana. *window : es un puntero a la venta, este es privado

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="source\main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="source\CWindow.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="incluide\CWindow.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
