Agregado de la camara, esta camaras seguira al jugador. la camara se crea apartir de un tamaño y una posicion, esta camara se le asigna a la ventana para que pinta lo que esta viendo la camara. tiene la funcion de inicializcion que ocupa tamaño y posicion, la de moverse, que ocupa un direccion y una velocidad, la funcion de setPosition donde solo le das su nueva posicion. aparte tiene gerPosition y getView, que es lo que se le pasara a la ventana. apartir de la camara checaremos la colision con los objetos en escena para ver cuales estan en camara

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="source\CWindow.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="source\CCamera.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="incluide\CWindow.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="incluide\CCamera.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
