Creacion de clase componente que es la base de todos los componente que haremos, como collider.
Creacion de la clase GameObject que es la base para todos los objetos del juego:
hay un enum para etiquetar que tipo de objeto es (el jugador, el piso,enemigo, etc),
tiene un ID para identificarlo: se puede setear y obtener.
una lista de componentes: existe una funcion para setear el componente (solo si no existe) y para obtener el componente (solo si existe).
una posicion: que es un vector3f que guarda xyz (el z se usara para el orden de dibujado), etas se puede seteat con un vector3f o 3 floats y tambien se puede obetner en un vector3f.
un rectangleshape: que es el cuadro que se pintara en pantalla.

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -121,12 +121,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\CCamera.cpp" />
+    <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\CWindow.cpp" />
+    <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="incluide\CCamera.h" />
+    <ClInclude Include="incluide\component.h" />
     <ClInclude Include="incluide\CWindow.h" />
+    <ClInclude Include="incluide\GameObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
