--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -125,12 +125,14 @@
     <ClCompile Include="source\CWindow.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\RenderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="incluide\CCamera.h" />
     <ClInclude Include="incluide\component.h" />
     <ClInclude Include="incluide\CWindow.h" />
     <ClInclude Include="incluide\GameObject.h" />
+    <ClInclude Include="incluide\RenderManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
