Se agrego el SceneManager: que se encarga de revisar los objetos en la scena: se hace un culin para saber que objetos estan colisionando con la camara, los objetos que colisionan en la camara se agregan a otro vector de objetos en pantalla, los objetos en pantalla se acomodan dependiedo de su profundidad en el eje z, una vez acomodados se actualizan unicamente esos objetos y se mandan a pintar al scene manager

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\RenderManager.cpp" />
+    <ClCompile Include="source\SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="incluide\CCamera.h" />
@@ -133,6 +134,7 @@
     <ClInclude Include="incluide\CWindow.h" />
     <ClInclude Include="incluide\GameObject.h" />
     <ClInclude Include="incluide\RenderManager.h" />
+    <ClInclude Include="incluide\SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
