--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -120,7 +120,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\CCamera.cpp" />
+    <ClCompile Include="source\component.cpp" />
+    <ClCompile Include="source\CWindow.cpp" />
+    <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\RenderManager.cpp" />
+    <ClCompile Include="source\SceneManager.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="incluide\CCamera.h" />
+    <ClInclude Include="incluide\component.h" />
+    <ClInclude Include="incluide\CWindow.h" />
+    <ClInclude Include="incluide\GameObject.h" />
+    <ClInclude Include="incluide\RenderManager.h" />
+    <ClInclude Include="incluide\SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
