--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/imgui.ini
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/imgui.ini
@@ -8,3 +8,18 @@ Pos=141,24
 Size=249,203
 Collapsed=1
 
+[Window][una ventana]
+Pos=60,60
+Size=107,48
+Collapsed=0
+
+[Window][Aladdin]
+Pos=444,62
+Size=117,77
+Collapsed=0
+
+[Window][Parallax]
+Pos=466,152
+Size=155,122
+Collapsed=0
+
