se agrego el componente de movimiento, se añadio uno a aladdin par a moverlo, ahora la camara sigue a aladdin cuando este se mueve. ademas agregue animacionas para caminado y correr (que en realidad es la misma animacion en velocidades diferentes)

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\InputManager.h" />
     <ClInclude Include="include\mainManager.h" />
+    <ClInclude Include="include\MoveComponent.h" />
     <ClInclude Include="include\parallax.h" />
     <ClInclude Include="include\RenderManager.h" />
     <ClInclude Include="include\ResourceManager.h" />
