--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="source\SoundManager.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="GameMap.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Animation.h">
@@ -66,6 +69,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="include\SoundManager.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="GameMap.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
