--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -120,13 +120,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\boxCollider.cpp" />
+    <ClCompile Include="include\GravityAladdin.cpp" />
     <ClCompile Include="source\Aladdin.cpp" />
     <ClCompile Include="source\Animation.cpp" />
     <ClCompile Include="source\Animator.cpp" />
     <ClCompile Include="source\CCamera.cpp" />
     <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\CWindow.cpp" />
+    <ClCompile Include="source\footCollision.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
+    <ClCompile Include="source\HeadCollision.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\mainManager.cpp" />
     <ClCompile Include="source\parallax.cpp" />
@@ -139,10 +143,14 @@
     <ClInclude Include="include\Aladdin.h" />
     <ClInclude Include="include\Animation.h" />
     <ClInclude Include="include\Animator.h" />
+    <ClInclude Include="include\boxCollider.h" />
     <ClInclude Include="include\CCamera.h" />
     <ClInclude Include="include\component.h" />
     <ClInclude Include="include\CWindow.h" />
+    <ClInclude Include="include\footCollision.h" />
     <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\GravityAladdin.h" />
+    <ClInclude Include="include\HeadCollision.h" />
     <ClInclude Include="include\InputManager.h" />
     <ClInclude Include="include\mainManager.h" />
     <ClInclude Include="include\MoveComponent.h" />
