Cambio de mainManager a renderManager y creacion de archuvos de graphic api

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -127,10 +127,11 @@
     <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\CWindow.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
+    <ClCompile Include="source\GraphicApi.cpp" />
     <ClCompile Include="source\main.cpp" />
-    <ClCompile Include="source\mainManager.cpp" />
-    <ClCompile Include="source\parallax.cpp" />
     <ClCompile Include="source\RenderManager.cpp" />
+    <ClCompile Include="source\parallax.cpp" />
+    <ClCompile Include="source\Render.cpp" />
     <ClCompile Include="source\ResourceManager.cpp" />
     <ClCompile Include="source\SceneManager.cpp" />
     <ClCompile Include="source\SoundManager.cpp" />
@@ -143,11 +144,12 @@
     <ClInclude Include="include\component.h" />
     <ClInclude Include="include\CWindow.h" />
     <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\GraphicApi.h" />
     <ClInclude Include="include\InputManager.h" />
-    <ClInclude Include="include\mainManager.h" />
+    <ClInclude Include="include\RenderManager.h" />
     <ClInclude Include="include\MoveComponent.h" />
     <ClInclude Include="include\parallax.h" />
-    <ClInclude Include="include\RenderManager.h" />
+    <ClInclude Include="include\Render.h" />
     <ClInclude Include="include\ResourceManager.h" />
     <ClInclude Include="include\SceneManager.h" />
     <ClInclude Include="include\SoundManager.h" />
