se agregaro un componente de boxCollider, al cual le puedes poner el tipo de colision, agregue una clase de objeto quad oara probar las colisiones. deribe 2 clases de boxCollision footscollision y headCollision, estas iran a objetos que se puedan mover, espesicicamente la de headcollision sera para aladdin. agregue la grabedad a aladdin. ahora aladdin puede saltar, rebotar y agarrarse a una cornisa

--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="include\GravityAladdin.h" />
     <ClInclude Include="include\HeadCollision.h" />
     <ClInclude Include="include\InputManager.h" />
+    <ClInclude Include="include\Quad.h" />
     <ClInclude Include="include\RenderManager.h" />
     <ClInclude Include="include\MoveComponent.h" />
     <ClInclude Include="include\parallax.h" />
