--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Archivos de origen\Components">
       <UniqueIdentifier>{b8c9ea01-fde7-446a-aae7-383f34313425}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Archivos de encabezado\TestObjects">
+      <UniqueIdentifier>{0b2fd04b-94b5-410f-814a-c4a0f41ec7f8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\main.cpp">
@@ -139,6 +142,9 @@
     </ClInclude>
     <ClInclude Include="include\HeadCollision.h">
       <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Quad.h">
+      <Filter>Archivos de encabezado\TestObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
