--- a/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
+++ b/SNESVERTICAL2_0/SNESVERTICAL2_0/SNESVERTICAL2_0.vcxproj
@@ -22,13 +22,13 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{BCAF92C8-E090-420F-AE0C-9B02FBFECD5D}</ProjectGuid>
     <RootNamespace>SNESVERTICAL20</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -134,6 +134,7 @@
     <ClCompile Include="source\GravityAladdin.cpp" />
     <ClCompile Include="source\HeadCollision.cpp" />
     <ClCompile Include="source\InvisibleObject.cpp" />
+    <ClCompile Include="source\Jarron.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\RenderManager.cpp" />
     <ClCompile Include="source\parallax.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="include\HeadCollision.h" />
     <ClInclude Include="include\InputManager.h" />
     <ClInclude Include="include\InvisibleObject.h" />
+    <ClInclude Include="include\Jarron.h" />
     <ClInclude Include="include\Quad.h" />
     <ClInclude Include="include\RenderManager.h" />
     <ClInclude Include="include\MoveComponent.h" />
